# pipewire

./: .cirrus.yml  .codespell-ignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Dockerfile  INSTALL.md  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  autogen.sh  bootstrap.sh  check_missing_headers.sh  config.h.meson  configure.ac  cross-x86.txt  git-version-gen  meson.build  meson.sh  meson_options.txt  pinos.spec  pipewire.spec  pw-uninstalled.sh
doc/: .gitignore  Doxyfile.in  DoxygenLayout.xml  api-tree.dox  api.dox  architecture.md  ci.md  custom.css  design.txt  dma-buf.dox  doxygen-awesome.css  examples.dox.in  index.dox  index.md  input-filter-h.sh  input-filter-md.py  input-filter.py  input-filter.sh  man-fixup.py  manpage.dox.in  media-session.dox  meson.build  module-man-rst.py  overview.dox  overview.md  pipewire-access.dox  pipewire-audio.dox  pipewire-daemon.dox  pipewire-design.dox  pipewire-library.dox  pipewire-midi.dox  pipewire-modules.dox  pipewire-objects-design.dox  pipewire-objects-design.md  pipewire-overview.dox  pipewire-overview.md  pipewire-portal.dox  pipewire-protocol.dox  pipewire-scheduling.dox  pipewire-session-manager.dox  (+37 more)
doc/dox/: index.dox  modules.dox  overview-for-users.md  overview.dox  pulse-modules.dox  pulse-modules.inc
doc/examples/: meson.build  tutorial3.c  tutorial4.c  tutorial5.c  tutorial7.c
doc/spa/: buffer.md  design.md  index.md  pod.md
man/: .gitignore  Makefile.am  libpipewire-modules.7.rst.in  meson.build  pinos-monitor.1.xml.in  pinos.1.xml.in  pipewire-cli.1.xml.in  pipewire-monitor.1.xml.in  pipewire-pulse-modules.7.rst.in  pipewire-pulse.1.rst.in  pipewire-pulse.conf.5.rst.in  pipewire.1.rst.in  pipewire.1.xml.in  pipewire.conf.5.rst.in  pipewire.conf.5.xml.in  pw-cat.1.rst.in  pw-cat.1.xml.in  pw-cli.1.rst.in  pw-cli.1.xml.in  pw-config.1.rst.in  pw-dot.1.rst.in  pw-dot.1.xml.in  pw-dump.1.rst.in  pw-jack.1.rst.in  pw-jack.1.xml.in  pw-link.1.rst.in  pw-loopback.1.rst.in  pw-metadata.1.rst.in  pw-metadata.1.xml.in  pw-mididump.1.rst.in  pw-mididump.1.xml.in  pw-mon.1.rst.in  pw-mon.1.xml.in  pw-profiler.1.rst.in  pw-profiler.1.xml.in  pw-pulse.1.xml.in  pw-top.1.rst.in  xmltoman  xmltoman.css  xmltoman.dtd  (+1 more)
pinos/: Makefile.am  meson.build
pinos/client/: array.h  buffer.c  buffer.h  build_mkenum.py  client-node.c  client-node.h  client-port.c  client-port.h  connection.c  connection.h  context.c  context.h  control.c  control.h  fdmanager.c  fdmanager.h  format.c  format.h  interfaces.h  introspect.c  introspect.h  io.c  list.h  log.c  log.h  loop.c  loop.h  mainloop.c  mainloop.h  map.h  mapper.c  mem.c  mem.h  memfd-wrappers.h  meson.build  node.c  node.h  object.h  pinos.c  pinos.h  (+31 more)
pinos/daemon/: .gitignore  daemon-config.c  daemon-config.h  main.c  meson.build  pinos.conf.in  pinos.desktop.in
pinos/dbus/: .gitignore  meson.build  org.pinos.xml
pinos/examples/: meson.build  video-play.c  video-src.c
pinos/gst/: gstburstcache.c  gstburstcache.h  gstpinos.c  gstpinosclock.c  gstpinosclock.h  gstpinosdepay.c  gstpinosdepay.h  gstpinosdeviceprovider.c  gstpinosdeviceprovider.h  gstpinosformat.c  gstpinosformat.h  gstpinospay.c  gstpinospay.h  gstpinospool.c  gstpinospool.h  gstpinosportsink.c  gstpinosportsink.h  gstpinosportsrc.c  gstpinosportsrc.h  gstpinosprovide.c  gstpinosprovide.h  gstpinossink.c  gstpinossink.h  gstpinossocketsink.c  gstpinossocketsink.h  gstpinossrc.c  gstpinossrc.h  gsttmpfileallocator.c  meson.build
pinos/modules/: meson.build  module-access.c  module-autolink.c  module-flatpak.c  module-mixer.c  module-protocol-dbus.c  module-protocol-native.c  module-suspend-on-idle.c
pinos/server/: access.c  access.h  channel.c  channel.h  client-node.c  client-node.h  client-source.c  client-source.h  client.c  client.h  command.c  command.h  core.c  core.h  daemon.c  daemon.h  data-loop.c  data-loop.h  dbus-client-node.c  dbus-client-node.h  link.c  link.h  main-loop.c  main-loop.h  memfd-wrappers.h  meson.build  module.c  module.h  node-factory.c  node-factory.h  node.c  node.h  port.c  port.h  protocol-native.c  protocol-native.h  registry.c  registry.h  resource.c  resource.h  (+20 more)
pinos/spi/: buffer.h  command.h  defs.h  event.h  node.h  params.h  plugin.h  port.h  result.h
pinos/tests/: alsa-utils.c  spi-alsa-sink.c  spi-audiotestsrc.c  spi-plugins.h  spi-volume.c  test-client.c  test-node.c
pinos/tools/: meson.build  pinos-monitor.c
pipewire-alsa/alsa-plugins/: ctl_pipewire.c  meson.build  pcm_pipewire.c
pipewire-alsa/tests/: meson.build  test-pipewire-alsa-stress.c
pipewire-jack/src/: control.c  dummy.c  export.c  match-rules.c  meson.build  metadata.c  net.c  pipewire-jack-extensions.h  pipewire-jack.c  pw-jack.in  ringbuffer.c  statistics.c  uuid.c
pipewire-pulseaudio/src/: bitset.h  channelmap.c  context.c  direction.c  (+27 more)
pkgconfig/: libpinos.pc.in  libpipewire.pc.in  libpipewirecore.pc.in  libpulsevideo.pc  libpulsevideo.pc.in  libspa.pc.in  meson.build
spa/: meson.build
src/: .gitignore  Makefile.am  bitset.c  channelmap.c  context.c  core-format.c  core-format.h  direction.c  error.c  ext-device-manager.c  ext-device-restore.c  ext-stream-restore.c  format.c  hashmap.c  hashmap.h  internal.h  introspect.c  json.c  mainloop-glib.c  mainloop-signal.c  mainloop.c  map-file  meson.build  metadata.c  operation.c  pipewire-jack.c  proplist.c  ringbuffer.c  rtclock.c  sample.c  scache.c  statistics.c  strbuf.c  strbuf.h  stream.c  subscribe.c  thread-mainloop.c  timeval.c  utf8.c  util.c  (+4 more)
test/: avb-bugs.md  meson.build  pwtest-compat.c  pwtest-implementation.h  pwtest.c  pwtest.h  pytest.ini  test-array.c  test-avb-utils.h  test-avb.c  test-client.c  test-conf-match-rules.c  test-config.c  test-context.c  test-example.c  test-functional.c  test-lib.c  test-logger.c  test-loop.c  test-map.c  test-mempool.c  test-properties.c  test-pwtest.c  test-spa-buffer.c  test-spa-control.c  test-spa-format.c  test-spa-json.c  test-spa-log.c  test-spa-node.c  test-spa-pod.c  test-spa-utils.c  test-support.c  test-utils.c
(+2111 files in other folders)
